tests/whiley/valid/test_1399.wyal
define f_ensures_0(int x, int r) is:
    (r >= 0) && (r <= 2)


assert "postcondition not satisfied":
    forall(int x):
        if:
            x == 2
        then:
            f_ensures_0(x, 1)


